--- a/.github/workflows/release-release.yml
+++ b/.github/workflows/release-release.yml
@@ -24,6 +24,10 @@ jobs:
         with:
           node-version: 16
 
+      - name: Install dependencies
+        run: |
+          npm install uglify-js
+
       - name: Bump & Tag version
         run: |
           git config user.name "automation"
