--- a/.github/workflows/release-release.yml
+++ b/.github/workflows/release-release.yml
@@ -25,8 +25,7 @@ jobs:
           node-version: 16
 
       - name: Install dependencies
-        run: |
-          npm install uglify-js
+        run: npm ci
 
       - name: Bump & Tag version
         run: |
