--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm ci
 
       - name: Build
-        run: npm build -- --cdn
+        run: npm run build -- --cdn
 
       - name: Publish
         env:
