--- a/.github/workflows/release-deploy.yml
+++ b/.github/workflows/release-deploy.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: "Version to deploy"
+        description: "Version to deploy (eg 1.2.3)"
         required: true
 
 jobs:
