--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: 16
 
       - name: Install
-        run: npm install
+        run: npm ci
 
       - name: Build
         run: npm run build
