--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -15,13 +15,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup NodeJS 18
+      - name: Setup NodeJS 16
         uses: actions/setup-node@v2
         with:
-          node-version: 18
+          node-version: 16
 
       - name: Install
-        run: nvm use && npm ci
+        run: npm ci
 
       - name: Build
         run: npm run build
