--- a/package.json
+++ b/package.json
@@ -21,24 +21,20 @@
 		"G",
 		"Y"
 	],
+	"author": {
+		"name": "Yuri Guller",
+		"email": "gullerya@gmail.com"
+	},
 	"homepage": "https://github.com/gullerya/object-observer",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/gullerya/object-observer"
+	},
 	"bugs": {
 		"url": "https://github.com/gullerya/object-observer/issues",
 		"email": "gullerya@gmail.com"
 	},
 	"license": "ISC",
-	"files": [
-		"dist",
-		"sri.json"
-	],
-	"main": "./dist/object-observer.min.js",
-	"browser": "./dist/object-observer.min.js",
-	"types": "./dist/object-observer.d.ts",
-	"type": "module",
-	"author": {
-		"name": "Yuri Guller",
-		"email": "gullerya@gmail.com"
-	},
 	"funding": [
 		{
 			"url": "https://paypal.me/gullerya?locale.x=en_US"
@@ -47,10 +43,17 @@
 			"url": "https://tidelift.com/funding/github/npm/object-observer"
 		}
 	],
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/gullerya/object-observer"
+	"type": "module",
+	"main": "./dist/object-observer.min.js",
+	"browser": "./dist/object-observer.min.js",
+	"types": "./dist/object-observer.d.ts",
+	"exports": {
+		"import": "./dist/object-observer.min.js"
 	},
+	"files": [
+		"dist",
+		"sri.json"
+	],
 	"scripts": {
 		"build": "node ./ci/tools/build-utils.js",
 		"lint": "eslint -c ./ci/.eslintrc.json ./src/*.js ./tests/*.js ./ci/**/*.js",
@@ -59,9 +62,9 @@
 		"postversion": "git push && git push --tags"
 	},
 	"devDependencies": {
-		"eslint": "^8.18.0",
+		"eslint": "^8.23.0",
 		"just-test": "^3.0.4",
 		"chai": "^4.3.6",
-		"uglify-js": "^3.16.1"
+		"uglify-js": "^3.17.0"
 	}
 }
