Added support for commonjs module (#122)
* Added support for commonjs module

* Refactored build script so it uses mkdist instead of babel

* Added missing semicolons
Changed mjs extension to js for ES module
Added pattern when building EM module

* Added changelog record

--- a/package.json
+++ b/package.json
@@ -31,9 +31,16 @@
 		"dist",
 		"sri.json"
 	],
-	"main": "./dist/object-observer.min.js",
+	"main": "./dist/cjs/object-observer.js",
+	"module": "./dist/object-observer.min.js",
 	"browser": "./dist/object-observer.min.js",
 	"types": "./dist/object-observer.d.ts",
+	"exports": {
+		".": {
+			"import": "./dist/object-observer.min.js",
+			"require": "./dist/cjs/object-observer.min.js"
+		}
+	},
 	"type": "module",
 	"author": {
 		"name": "Yuri Guller",
@@ -59,9 +66,10 @@
 		"postversion": "git push && git push --tags"
 	},
 	"devDependencies": {
+		"chai": "^4.3.6",
 		"eslint": "^8.18.0",
 		"just-test": "^3.0.4",
-		"chai": "^4.3.6",
+		"mkdist": "^0.3.13",
 		"uglify-js": "^3.16.1"
 	}
 }
