CJS module files have .cjs extension Main changed to ./dist/object-observer.min.js

--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
 		"dist",
 		"sri.json"
 	],
-	"main": "./dist/cjs/object-observer.js",
+	"main": "./dist/object-observer.min.js",
 	"module": "./dist/object-observer.min.js",
 	"browser": "./dist/object-observer.min.js",
 	"types": "./dist/object-observer.d.ts",
 	"exports": {
 		".": {
 			"import": "./dist/object-observer.min.js",
-			"require": "./dist/cjs/object-observer.min.js"
+			"require": "./dist/cjs/object-observer.min.cjs"
 		}
 	},
 	"type": "module",
