--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
 		"chai": "^4.3.6",
 		"eslint": "^8.23.0",
 		"just-test": "^3.0.4",
-		"mkdist": "^0.3.13",
-		"uglify-js": "^3.17.0"
+		"esbuild": "^0.15.7",
+		"object-observer": "5.1.0"
 	}
 }
