--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
 		"chai": "^4.3.6",
 		"eslint": "^8.23.0",
 		"just-test": "^3.0.4",
-		"esbuild": "^0.15.7",
-		"object-observer": "5.1.0"
+		"esbuild": "^0.15.7"
 	}
 }
