--- a/.github/workflows/release-deploy.yml
+++ b/.github/workflows/release-deploy.yml
@@ -6,6 +6,12 @@ on:
       version:
         description: "Version to deploy (eg 1.2.3)"
         required: true
+        type: string
+  workflow_call:
+    inputs:
+      version:
+        required: true
+        type: string
 
 jobs:
   release-deploy:
@@ -13,13 +19,13 @@ jobs:
 
     steps:
       - name: Setup NodeJS 18
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: 18
 
       # Get release version
       - name: Get release version
-        run: echo "RELEASE_VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=${{ inputs.version }}" >> $GITHUB_ENV
 
       # Pull the object-observer version to be deployed
       - name: Install
