--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -11,12 +11,12 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           token: ${{ secrets.OO_CI_AT }}
 
       - name: Setup NodeJS 18
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: 18
           registry-url: "https://registry.npmjs.org"
@@ -35,9 +35,8 @@ jobs:
       # Trigger deploy to CDN
       - name: Obtain release version
         run: echo "RELEASE_VERSION=$(cat package.json | jq -r '.version')" >> $GITHUB_ENV
+        
       - name: Tirgger deploy to CDN
-        uses: benc-uk/workflow-dispatch@v1
+        uses: ./.github/workflows/release-deploy.yml
         with:
-          workflow: "Deploy (CDN)"
-          token: ${{ secrets.OO_CI_AT }}
-          inputs: '{ "version": "${{ env.RELEASE_VERSION }}" }'
+          version: ${{ env.RELEASE_VERSION }}
