--- a/.github/workflows/release-release.yml
+++ b/.github/workflows/release-release.yml
@@ -19,10 +19,10 @@ jobs:
         with:
           token: ${{ secrets.OO_CI_AT }}
 
-      - name: Setup NodeJS 18
+      - name: Setup NodeJS
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version-file: '.nvmrc'
 
       - name: Install dependencies
         run: npm ci
