--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -39,11 +39,7 @@ jobs:
         run: echo "::set-output name=packageVersion::$(cat package.json | jq -r '.version')"
 
   trigger-cdn-deploy:
-    runs-on: ubuntu-20.04
     needs: publish
-    env:
-      RELEASE_VERSION: ${{ needs.publish.outputs.packageVersion }}
-
     uses: ./.github/workflows/release-deploy.yml
     with:
-      version: ${{ env.RELEASE_VERSION }}
+      version: ${{ needs.publish.outputs.packageVersion }}
