--- a/.github/workflows/release-deploy.yml
+++ b/.github/workflows/release-deploy.yml
@@ -18,6 +18,9 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Setup NodeJS
         uses: actions/setup-node@v3
         with:
