--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup NodeJS
         uses: actions/setup-node@v3
         with:
-          node-version-file: '.nvmrc'
+          node-version-file: ".nvmrc"
 
       - name: Install
         run: npm ci
@@ -33,4 +33,4 @@ jobs:
         run: npm run test
 
       - name: Report coverage
-        run: bash <(curl -s https://codecov.io/bash)
+        uses: codecov/codecov-action@v3
