--- a/package.json
+++ b/package.json
@@ -66,9 +66,9 @@
 		"postversion": "git push && git push --tags"
 	},
 	"devDependencies": {
-		"chai": "^4.3.6",
-		"eslint": "^8.24.0",
+		"chai": "4.3.6",
+		"eslint": "^8.35.0",
 		"just-test": "^3.0.4",
-		"esbuild": "^0.15.9"
+		"esbuild": "^0.17.10"
 	}
 }
