--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "object-observer",
+	"name": "@gullerya/object-observer",
 	"version": "6.0.0",
 	"description": "object-observer utility provides simple means to (deeply) observe specified object/array changes; implemented via native Proxy; changes delivered in a synchronous way",
 	"keywords": [
