--- a/package.json
+++ b/package.json
@@ -66,10 +66,10 @@
 		"postversion": "git push && git push --tags"
 	},
 	"devDependencies": {
+		"@gullerya/just-test": "^4.0.0",
 		"chai": "4.3.6",
-		"eslint": "^8.35.0",
-		"just-test": "^3.0.4",
-		"esbuild": "^0.17.10"
+		"eslint": "^8.36.0",
+		"esbuild": "^0.17.12"
 	},
 	"publishConfig": {
 		"access": "public"
