--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -58,6 +58,28 @@ jobs:
       - name: Report coverage
         uses: codecov/codecov-action@v3
 
+  quality_pipeline_firefox:
+    runs-on: ubuntu-20.04
+    timeout-minutes: 10
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup NodeJS
+        uses: actions/setup-node@v3
+        with:
+          node-version-file: '.nvmrc'
+
+      - name: Install
+        run: npm ci
+
+      - name: Test
+        run: npm run test:firefox
+
+      - name: Report coverage
+        uses: codecov/codecov-action@v3
+
   quality_pipeline_webkit:
     runs-on: ubuntu-20.04
     timeout-minutes: 10
