--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -74,6 +74,12 @@ jobs:
       - name: Report coverage
         uses: codecov/codecov-action@v3
 
+      - name: Archive logs
+        uses: actions/upload-artifact@v3
+        with:
+          name: chromium-logs
+          path: reports/logs/chromium-112.0.5615.29.log
+
   quality_pipeline_firefox:
     runs-on: ubuntu-20.04
     timeout-minutes: 5
