--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -4,8 +4,6 @@ on:
   pull_request:
     branches:
       - main
-  schedule:
-    - cron: "0 */3 * * *"
 
 jobs:
   quality_pipeline_lint:
@@ -14,7 +12,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup NodeJS
         uses: actions/setup-node@v3
@@ -33,7 +31,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup NodeJS
         uses: actions/setup-node@v3
@@ -58,7 +56,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup NodeJS
         uses: actions/setup-node@v3
@@ -66,7 +64,7 @@ jobs:
           node-version-file: '.nvmrc'
 
       - name: Install
-        run: npm ci
+        run: npm ci && npx playwright install
 
       - name: Test
         run: npm run test:chromium
@@ -86,7 +84,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup NodeJS
         uses: actions/setup-node@v3
@@ -94,7 +92,7 @@ jobs:
           node-version-file: '.nvmrc'
 
       - name: Install
-        run: npm ci
+        run: npm ci && npx playwright install
 
       - name: Test
         run: npm run test:firefox
@@ -108,7 +106,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup NodeJS
         uses: actions/setup-node@v3
