--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -64,7 +64,7 @@ jobs:
           node-version-file: '.nvmrc'
 
       - name: Install
-        run: npm ci && npx playwright install
+        run: npm ci && npx playwright install --with-deps chromium
 
       - name: Test
         run: npm run test:chromium
@@ -92,7 +92,7 @@ jobs:
           node-version-file: '.nvmrc'
 
       - name: Install
-        run: npm ci && npx playwright install
+        run: npm ci && npx playwright install --with-deps firefox
 
       - name: Test
         run: npm run test:firefox
@@ -114,7 +114,7 @@ jobs:
           node-version-file: '.nvmrc'
 
       - name: Install
-        run: npm ci && npx playwright install
+        run: npm ci && npx playwright install --with-deps webkit
 
       - name: Test
         run: npm run test:webkit
