--- a/package.json
+++ b/package.json
@@ -71,10 +71,12 @@
 		"postversion": "git push && git push --tags"
 	},
 	"devDependencies": {
+		"@eslint/eslintrc": "^3.2.0",
+		"@eslint/js": "^9.20.0",
 		"@gullerya/just-test": "^4.0.6",
-		"chai": "4.3.6",
-		"eslint": "^8.54.0",
-		"esbuild": "^0.19.5"
+		"esbuild": "^0.25.0",
+		"eslint": "^9.20.1",
+		"globals": "^15.15.0"
 	},
 	"publishConfig": {
 		"access": "public"
